--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Bootstrap 4 Github Pages
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
   A Bootstrap 4 start up project for Jekyll and Github Pages
-#baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/Portfolio" # the subpath of your site, e.g. /blog
+url: "https://matthewmiddlebrook-acu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
